--- a/Battle/Battle.vcxproj
+++ b/Battle/Battle.vcxproj
@@ -140,24 +140,34 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="src\Application\Application.cpp" />
-    <ClCompile Include="src\Camera\Camera.cpp" />
+    <ClCompile Include="src\Render\Camera\Camera.cpp" />
+    <ClCompile Include="src\Game\GameObject\GameObject.cpp" />
     <ClCompile Include="src\main.cpp" />
-    <ClCompile Include="src\Renderer\Renderer.cpp" />
-    <ClCompile Include="src\Scene\Scene.cpp" />
-    <ClCompile Include="src\Shader\Shader.cpp" />
+    <ClCompile Include="src\Render\IndexBuffer\IndexBuffer.cpp" />
+    <ClCompile Include="src\Render\Renderer\Renderer.cpp" />
+    <ClCompile Include="src\Game\Scene\Scene.cpp" />
+    <ClCompile Include="src\Render\Shader\Shader.cpp" />
+    <ClCompile Include="src\Render\VertexArray\VertexArray.cpp" />
+    <ClCompile Include="src\Render\VertexBuffer\VertexBuffer.cpp" />
     <ClCompile Include="src\Window\Window.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Application\Application.h" />
-    <ClInclude Include="src\Camera\Camera.h" />
+    <ClInclude Include="src\Render\Camera\Camera.h" />
     <ClInclude Include="src\Event\ApplicationEvent.h" />
     <ClInclude Include="src\Event\EventDispatcher.h" />
     <ClInclude Include="src\Event\KeyEvent.h" />
     <ClInclude Include="src\Event\MouseEvent.h" />
-    <ClInclude Include="src\Renderer\Renderer.h" />
-    <ClInclude Include="src\Scene\Scene.h" />
+    <ClInclude Include="src\Game\GameObject\GameObject.h" />
+    <ClInclude Include="src\Render\IndexBuffer\IndexBuffer.h" />
+    <ClInclude Include="src\Render\Renderer\Renderer.h" />
+    <ClInclude Include="src\Game\Scene\Scene.h" />
     <ClInclude Include="src\Event\Event.h" />
-    <ClInclude Include="src\Shader\Shader.h" />
+    <ClInclude Include="src\Render\Shader\Shader.h" />
+    <ClInclude Include="src\Render\VertexArray\VertexArray.h" />
+    <ClInclude Include="src\Render\VertexBuffer\BufferLayout.h" />
+    <ClInclude Include="src\Render\VertexBuffer\VertexBuffer.h" />
+    <ClInclude Include="src\Utils\Utils.h" />
     <ClInclude Include="src\Window\Window.h" />
   </ItemGroup>
   <ItemGroup>
