--- a/Battle/Battle.vcxproj.filters
+++ b/Battle/Battle.vcxproj.filters
@@ -18,7 +18,7 @@
     <ClCompile Include="src\main.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="src\Scene\Scene.cpp">
+    <ClCompile Include="src\Game\Scene\Scene.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="src\Window\Window.cpp">
@@ -27,18 +27,30 @@
     <ClCompile Include="src\Application\Application.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="src\Renderer\Renderer.cpp">
+    <ClCompile Include="src\Render\Renderer\Renderer.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="src\Camera\Camera.cpp">
+    <ClCompile Include="src\Render\Camera\Camera.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="src\Shader\Shader.cpp">
+    <ClCompile Include="src\Render\Shader\Shader.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Game\GameObject\GameObject.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Render\VertexBuffer\VertexBuffer.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Render\VertexArray\VertexArray.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Render\IndexBuffer\IndexBuffer.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\Scene\Scene.h">
+    <ClInclude Include="src\Game\Scene\Scene.h">
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="src\Window\Window.h">
@@ -47,7 +59,7 @@
     <ClInclude Include="src\Application\Application.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="src\Renderer\Renderer.h">
+    <ClInclude Include="src\Render\Renderer\Renderer.h">
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="src\Event\Event.h">
@@ -65,10 +77,28 @@
     <ClInclude Include="src\Event\EventDispatcher.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="src\Camera\Camera.h">
+    <ClInclude Include="src\Render\Camera\Camera.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="src\Shader\Shader.h">
+    <ClInclude Include="src\Render\Shader\Shader.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Game\GameObject\GameObject.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Render\VertexBuffer\VertexBuffer.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Render\VertexArray\VertexArray.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Render\IndexBuffer\IndexBuffer.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Render\VertexBuffer\BufferLayout.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Utils\Utils.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
