--- a/Battle/Battle.vcxproj
+++ b/Battle/Battle.vcxproj
@@ -143,6 +143,7 @@
     <ClCompile Include="src\Render\Camera\Camera.cpp" />
     <ClCompile Include="src\Game\GameObject\GameObject.cpp" />
     <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="src\Render\Texture\Texture.cpp" />
     <ClCompile Include="src\Render\IndexBuffer\IndexBuffer.cpp" />
     <ClCompile Include="src\Render\Renderer\Renderer.cpp" />
     <ClCompile Include="src\Game\Scene\Scene.cpp" />
@@ -159,6 +160,7 @@
     <ClInclude Include="src\Event\KeyEvent.h" />
     <ClInclude Include="src\Event\MouseEvent.h" />
     <ClInclude Include="src\Game\GameObject\GameObject.h" />
+    <ClInclude Include="src\Render\Texture\Texture.h" />
     <ClInclude Include="src\Render\IndexBuffer\IndexBuffer.h" />
     <ClInclude Include="src\Render\Renderer\Renderer.h" />
     <ClInclude Include="src\Game\Scene\Scene.h" />
@@ -174,7 +176,13 @@
     <Text Include="assets\shader\normal_shader" />
   </ItemGroup>
   <ItemGroup>
+    <Image Include="assets\texture\bk.jpg" />
     <Image Include="assets\texture\te.jpg" />
+    <Image Include="assets\texture\xia.jpg" />
+    <Image Include="assets\texture\xiang.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="assets\texture\te2.jpg" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
